Modified htmls and css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+	<!--#include file="templates/head.html" -->
+	<meta name="Portal Home" content="IR Requests Log Portal Site">
+	<title>OIR Data Requests Home | UTSA | University of Texas at San Antonio</title>
 </head>
 
 <body>
+	<!-- header -->
+	<!--#include file="templates/header.html" -->
+	<section class="container" id="site-content">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="row">
+					<div class="col-sm-12" role="main">
+						<!-- begin page content -->
+						<div class="row">
+							<div class="col-sm-12">
+								<p>Add some description here</p>
+							</div>
+							<div class="col-sm-12 quick-links">
+								<div class="col-sm-12 text-sm-center">
+									<h2>Add some title here</h2>
+								</div>
+							</div>
+						</div>
+						<!-- end page content -->
+					</div>
+				</div>
+				<div class="row">
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<!-- footer -->
+	<!--#include file="templates/footer.html" -->
 </body>
 </html>
