--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
 	<!--#include file="templates/head.html" -->
 	<meta name="Portal Home" content="IR Requests Log Portal Site">
 	<title>OIR Data Requests Home | UTSA | University of Texas at San Antonio</title>
+	
+	<link href="css/global.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/print.css" media="print" rel="stylesheet" type="text/css" />
+	<link href="css/site.css" rel="stylesheet" type="text/css"/>
+	
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 </head>
 
 <body>
 	<!-- header -->
 	<!--#include file="templates/header.html" -->
+	<div id="header-placeholder">
+	</div>
+	
+	<!--#include file="templates/site-top-navigation.html" -->
+	<!-- navigation bar -->
+	<div id="nav-placeholder">
+	</div>
+	<script>
+		$(function(){
+  			$("#header-placeholder").load("templates/header.html");
+			$("#nav-placeholder").load("templates/site-top-navigation.html");
+		});
+	</script>
+	
 	<section class="container" id="site-content">
 		<div class="row">
 			<div class="col-md-12">
@@ -17,11 +38,11 @@
 						<!-- begin page content -->
 						<div class="row">
 							<div class="col-sm-12">
-								<p>Add some description here</p>
+								<h1>Placeholder</h1>
 							</div>
-							<div class="col-sm-12 quick-links">
+							<div class="col-sm-12">
 								<div class="col-sm-12 text-sm-center">
-									<h2>Add some title here</h2>
+									<p>Insert Requests Table here</p>
 								</div>
 							</div>
 						</div>
